# Linux-0.12

./: .gitignore  CMakeLists.txt  README.md
Preparation/: CMakeLists.txt
Preparation/IA-32_Prepare/: 1+2+...+100.s  CMakeLists.txt  advanced_bootsect.s  simple_bootsect.s
boot/: CMakeLists.txt  bootsect.s  head.s  setup.s
fs/: CMakeLists.txt
include/: unistd.h
include/linux/: sys.h
init/: CMakeLists.txt
kernel/: CMakeLists.txt  reboot.c  sys.c  sys_inf.c
kernel/blk_drv/: CMakeLists.txt
kernel/chr_drv/: CMakeLists.txt
kernel/math/: CMakeLists.txt
lib/: CMakeLists.txt
mm/: CMakeLists.txt
modules/: CMakeASM_GASCompiler.cmake  CMakeASM_GASInformation.cmake  CMakeDetermineASM_GASCompiler.cmake  CMakeTestASM_GASCompiler.cmake  default_proj.cmake  setup_gas.cmake
modules/Platform/: Linux.cmake
script/: strip_bootsect.sh  strip_setup.sh
tools/: build.sh
